--- a/index.html
+++ b/index.html
@@ -71,6 +71,95 @@
             </div> 
         </div>
         <!-- slider -->
+
+        <div class="content">
+            <div class="container">
+                <div class="content-block1">
+                    <h1>タオバオ超特急！」の特徴！</h1>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="content-block1-item content-block1-item_primary">
+                                <div class="content-block1-item_img">
+                                    <img src="img/icons/partnership.png" alt="partnership">
+                                </div>
+                                <div class="content-block1-item_h">
+                                    <h2>中国語は一切不要です！</h2>
+                                    <h3>中国語は一切不要です。日本人スタッフが窓口担当だから安心して仕入のご相談が可能です。</h3>    
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col-12 -->
+                        <div class="col-12">
+                            <div class="content-block1-item content-block1-item_orange">
+                                <div class="content-block1-item_img">
+                                    <img src="img/icons/price.png" alt="price">
+                                </div>
+                                <div class="content-block1-item_h">
+                                    <h2>格安な料金体系！</h2>
+                                    <h3>すべて会員制で運用しております。会費も無料から対応可能です</h3>    
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col-12 -->
+                        <div class="col-12">
+                            <div class="content-block1-item content-block1-item_green">
+                                <div class="content-block1-item_img">
+                                    <img src="img/icons/assurance.png" alt="assurance">
+                                </div>
+                                <div class="content-block1-item_h content-block1-item_h_text-black">
+                                    <h2>品質管理はお任せください！</h2>
+                                    <h3>日本の品質基準を知り抜いた弊社だから品質トラブルもご安心ください。</h3>    
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col-12 -->
+                        <div class="col-12">
+                            <div class="content-block1-item content-block1-item_grey">
+                                <div class="content-block1-item_img">
+                                    <img src="img/icons/amaz.png" alt="amaz">
+                                </div>
+                                <div class="content-block1-item_h content-block1-item_h_text-heavy">
+                                    <h2>Amazon  FBA直送対応！</h2>
+                                    <h3>Amazon　FBAへの直送もお任せください。</h3>
+                                    <h3>経験豊富なスタッフが対応いたします。</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col-12 -->
+                        <div class="col-12">
+                            <div class="content-block1-item content-block1-item_yellow">
+                                <div class="content-block1-item_img">
+                                    <img src="img/icons/production.png" alt="production">
+                                </div>
+                                <div class="content-block1-item_h content-block1-item_h_text-heavy content-block1-item_h_text-black">
+                                    <h2>OEM生産もお任せください！</h2>
+                                    <h3>長年の経験で培ったプロフェッショナルのOEMサポートをお試しください。</h3>                                 
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col-12 -->
+                        <div class="col-12">
+                            <div class="content-block1-item content-block1-item_aqua">
+                                <div class="content-block1-item_img">
+                                    <img src="img/icons/japan.png" alt="japan">
+                                </div>
+                                <div class="content-block1-item_h">
+                                    <h2>全て日本円で決済可能です！海外送金は一切不要です！</h2>
+                                    <h3>決済は銀行振込またはPayPalでのクレジットカード決済を採用しております。</h3>
+                                    <h3>不安な海外送金や人民元・ドルへの両替は一切不要です。</h3>
+                                    <h3>OEM生産等の大口のお客様はT/T送金・L/C開設での決済にも対応致します。別途ご相談ください。</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col-12 -->
+                    </div>
+                    <!-- row -->
+                </div>
+                <!-- contant-block1 -->
+            </div>
+            <!-- container -->
+        </div>
+        <!-- content -->
       </div>
     
       <script src="js/jquery.min.js"></script>
