--- a/index.html
+++ b/index.html
@@ -156,8 +156,60 @@
                     <!-- row -->
                 </div>
                 <!-- contant-block1 -->
+
+                <div class="content-block2">
+                    <h1>私たちを選ぶ理由</h1>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="content-block2-item">
+                                <div class="content-block2-item_img">
+                                    <img src="img/icons/icon_block2.png" alt="icon_block2">
+                                </div>
+                                <div class="content-block2-item_h">
+                                    <h2>「タオバオ超特急！」を選ぶ理由</h2>
+                                    <h3>淘宝網・阿里巴巴・T-MALLの仕入れ代行・OEM生産・FBA直送は私達にお任せください。</h3>                                 
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col-12 -->
+                        <div class="col-12">
+                            <div class="content-block2-item">
+                                <div class="content-block2-item_img content-block2-item_img_pink">
+                                    <img src="img/icons/office-building.png" alt="office">
+                                </div>
+                                <div class="content-block2-item_h content-block2-item_h__items">
+                                    <h2>タオバオ超特急！」とは？</h2>
+                                    <h3>浙江省杭州市のNOTION LIMITEDと日本のスペラトレーディングが運営する中国輸入代行サービスです。NOTION LIMITEDは開発・設計・生産・販売・貿易を統合する貿易企業です。日本向け取引で8年の実績と信頼が御座います。大手商社・ホームセンター・メーカー・通販事業者様等との取引で生急拡大してまいりました。NOTION LIMITEDもスペラトレーディングも各種OEM生産のプロフェッショナル集団です。</h3>
+                                    <h3>日本語と日本の品質基準・品質管理に精通したスタッフが複数名在籍しております。お客様のビジネスを最大限にサポートいたします。</h3>                                 
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col-12 -->
+                    </div>
+                    <!-- row -->
+                </div>
+                <!-- contant-block1 -->
             </div>
             <!-- container -->
+            <div class="content-block3">
+                <h1>Price plan</h1>
+                <h2>料金プラン</h2>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="content-block3-item">
+                            <p>タオバオ超特急！」は会員制で運用しております。「スタンダード」「シルバー」 「ゴールド」「プラチナ」の4種の会員種別が御座います</p>
+                            <p>スタンダード会員は月額会費無料で気軽に始めることが出来ます。ゴールド会員・プラチナ会員・アンバサダー会員は代行手数料無料で仕入れが可能です。</p>
+                            <p>発注量に応じた代行手数料が無料のため、仕入れ量が多くなっても安心してビジネスに専念できます。</p>
+                            <p>「スタンダード」 中国輸入初心者の方・副業で始めたい方に最適です。月額会費無料で始められます。初めての方でも親切・丁寧にサポート致します。</p>
+                            <p>「シルバー」 月額仕入額30万円以上のお客様に最適です。小規模個人事業主様等に最適です。</p>
+                            <p>「ゴールド」 月額仕入額50万円以上のお客様に最適です。代行手数料無料の他に優遇為替・優遇オプション等の特典が御座います。</p>
+                            <p>「プラチナ」 月額仕入額50万円以上のお客様に最適です。代行手数料無料の他に優遇為替・優遇オプション等の特典が御座います。</p>
+                            <p>別途月額仕入額1000万円以上のお客様には招待制の「アンバサダー」もご用意致します。</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
         <!-- content -->
       </div>
