--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                                     <img src="img/icons/amaz.png" alt="amaz">
                                 </div>
                                 <div class="content-block1-item_h content-block1-item_h_text-heavy">
-                                    <h2>Amazon  FBA直送対応！</h2>
-                                    <h3>Amazon　FBAへの直送もお任せください。</h3>
-                                    <h3>経験豊富なスタッフが対応いたします。</h3>
+                                    <h2>Amazon FBA直送対応！</h2>
+                                    <h4>Amazon FBAへの直送もお任せください。</h4>
+                                    <h4>経験豊富なスタッフが対応いたします。</h4>
                                 </div>
                             </div>
                         </div>
@@ -145,9 +145,9 @@
                                 </div>
                                 <div class="content-block1-item_h">
                                     <h2>全て日本円で決済可能です！海外送金は一切不要です！</h2>
-                                    <h3>決済は銀行振込またはPayPalでのクレジットカード決済を採用しております。</h3>
-                                    <h3>不安な海外送金や人民元・ドルへの両替は一切不要です。</h3>
-                                    <h3>OEM生産等の大口のお客様はT/T送金・L/C開設での決済にも対応致します。別途ご相談ください。</h3>
+                                    <h4>決済は銀行振込またはPayPalでのクレジットカード決済を採用しております。</h4>
+                                    <h4>不安な海外送金や人民元・ドルへの両替は一切不要です。</h4>
+                                    <h4>OEM生産等の大口のお客様はT/T送金・L/C開設での決済にも対応致します。別途ご相談ください。</h4>
                                 </div>
                             </div>
                         </div>
@@ -188,28 +188,230 @@
                     </div>
                     <!-- row -->
                 </div>
-                <!-- contant-block1 -->
+                <!-- contant-block2 -->
             </div>
             <!-- container -->
+
             <div class="content-block3">
                 <h1>Price plan</h1>
                 <h2>料金プラン</h2>
                 <div class="row">
                     <div class="col-12">
                         <div class="content-block3-item">
-                            <p>タオバオ超特急！」は会員制で運用しております。「スタンダード」「シルバー」 「ゴールド」「プラチナ」の4種の会員種別が御座います</p>
-                            <p>スタンダード会員は月額会費無料で気軽に始めることが出来ます。ゴールド会員・プラチナ会員・アンバサダー会員は代行手数料無料で仕入れが可能です。</p>
-                            <p>発注量に応じた代行手数料が無料のため、仕入れ量が多くなっても安心してビジネスに専念できます。</p>
-                            <p>「スタンダード」 中国輸入初心者の方・副業で始めたい方に最適です。月額会費無料で始められます。初めての方でも親切・丁寧にサポート致します。</p>
-                            <p>「シルバー」 月額仕入額30万円以上のお客様に最適です。小規模個人事業主様等に最適です。</p>
-                            <p>「ゴールド」 月額仕入額50万円以上のお客様に最適です。代行手数料無料の他に優遇為替・優遇オプション等の特典が御座います。</p>
-                            <p>「プラチナ」 月額仕入額50万円以上のお客様に最適です。代行手数料無料の他に優遇為替・優遇オプション等の特典が御座います。</p>
-                            <p>別途月額仕入額1000万円以上のお客様には招待制の「アンバサダー」もご用意致します。</p>
+                            <div class="container">
+                                <p>タオバオ超特急！」は会員制で運用しております。「スタンダード」「シルバー」 「ゴールド」「プラチナ」の4種の会員種別が御座います</p>
+                                <p>スタンダード会員は月額会費無料で気軽に始めることが出来ます。ゴールド会員・プラチナ会員・アンバサダー会員は代行手数料無料で仕入れが可能です。</p>
+                                <p>発注量に応じた代行手数料が無料のため、仕入れ量が多くなっても安心してビジネスに専念できます。</p>
+                                <p>「スタンダード」 中国輸入初心者の方・副業で始めたい方に最適です。月額会費無料で始められます。初めての方でも親切・丁寧にサポート致します。</p>
+                                <p>「シルバー」 月額仕入額30万円以上のお客様に最適です。小規模個人事業主様等に最適です。</p>
+                                <p>「ゴールド」 月額仕入額50万円以上のお客様に最適です。代行手数料無料の他に優遇為替・優遇オプション等の特典が御座います。</p>
+                                <p>「プラチナ」 月額仕入額50万円以上のお客様に最適です。代行手数料無料の他に優遇為替・優遇オプション等の特典が御座います。</p>
+                                <p>別途月額仕入額1000万円以上のお客様には招待制の「アンバサダー」もご用意致します。</p>    
+                            </div>
+                            <!-- container -->
                         </div>
+                        <!-- content-block3-item -->
                     </div>
+                    <!-- col-12 -->
                 </div>
-
+                <!-- row -->
             </div>
+            <!-- content-block3 -->
+
+            <div class="content-block4">
+                <h1>Services</h1>
+                <h2>業務紹介</h2>
+                <div class="container">
+                    <div class="row content-block4-item">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="content-block4-item_card">
+                                <img src="img/cards/card1.png" alt="card1">
+                                <div class="content-block4-item_card-content">
+                                    <div class="content-block4-item_card-content-img">
+                                        <img src="img/cards/card-icon.png" alt="card-icon">
+                                    </div>
+                                    <h3>輸入代行サービス</h3>
+                                    <p>中国最大のECモール淘宝網や阿里巴巴・<br> T-MALLでもお客様の買付仕入を代行いたします。</p>
+                                </div>
+                                <a href="#" class="btn btn-primary">See More</a>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="content-block4-item_card">
+                                <img src="img/cards/card2.png" alt="card2">
+                                <div class="content-block4-item_card-content">
+                                    <div class="content-block4-item_card-content-img">
+                                        <img src="img/cards/card-icon.png" alt="card-icon">
+                                    </div>
+                                    <h3>FBA直送サービス</h3>
+                                    <p>お客様に買付頂きました最切な商品を<br>AmazonのFBA倉庫まで直送させて頂きます</p>
+                                </div>
+                                <a href="#" class="btn btn-primary">See More</a>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="content-block4-item_card">
+                                <img src="img/cards/card3.png" alt="card3">
+                                <div class="content-block4-item_card-content">
+                                    <div class="content-block4-item_card-content-img">
+                                        <img src="img/cards/card-icon.png" alt="card-icon">
+                                    </div>
+                                    <h3>商品リサーチサービス</h3>
+                                    <p>お客様がお探しの商品を淘宝網等でお客様<br>に代わって弊社のスタッフがお探しします。</p>
+                                </div>
+                                <a href="#" class="btn btn-primary">See More</a>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="content-block4-item_card">
+                                <img src="img/cards/card4.png" alt="card4">
+                                <div class="content-block4-item_card-content">
+                                    <div class="content-block4-item_card-content-img">
+                                        <img src="img/cards/card-icon.png" alt="card-icon">
+                                    </div>
+                                    <h3>検品・アパレル加工サービス</h3>
+                                    <p>各種検品及び加工・付属品OEM作成等のサ<br>ービスをご提供致します。</p>
+                                </div>
+                                <a href="#" class="btn btn-primary">See More</a>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="content-block4-item_card">
+                                <img src="img/cards/card5.png" alt="card5">
+                                <div class="content-block4-item_card-content">
+                                    <div class="content-block4-item_card-content-img">
+                                        <img src="img/cards/card-icon.png" alt="card-icon">
+                                    </div>
+                                    <h3>OEMサービス</h3>
+                                    <p>各種OEM生産を代行致します。名入れやオ<br>リジナルパッケージによる梱包等、お客様の<br>ご希望に沿ったサービスを提供いたします</p>
+                                </div>
+                                <a href="#" class="btn btn-primary">See More</a>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="content-block4-item_card">
+                                <img src="img/cards/card6.png" alt="card6">
+                                <div class="content-block4-item_card-content">
+                                    <div class="content-block4-item_card-content-img">
+                                        <img src="img/cards/card-icon.png" alt="card-icon">
+                                    </div>
+                                    <h3>商品撮影サービス</h3>
+                                    <p>売上拡大には魅力のある商品も重要ですが<br>、商品の魅力を最大限にアピールする商品<br> 写真も重要です。</p>
+                                </div>
+                                <a href="#" class="btn btn-primary">See More</a>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="content-block4-item_card">
+                                <img src="img/cards/card1.png" alt="card1">
+                                <div class="content-block4-item_card-content">
+                                    <div class="content-block4-item_card-content-img">
+                                        <img src="img/cards/card-icon.png" alt="card-icon">
+                                    </div>
+                                    <h3>商品撮影サービス</h3>
+                                    <p>売上拡大には魅力のある商品も重要ですが<br>、商品の魅力を最大限にアピールする商品<br>写真も重要です。</p>
+                                </div>
+                                <a href="#" class="btn btn-primary">See More</a>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="content-block4-item_card">
+                                <img src="img/cards/card2.png" alt="card2">
+                                <div class="content-block4-item_card-content">
+                                    <div class="content-block4-item_card-content-img">
+                                        <img src="img/cards/card-icon.png" alt="card-icon">
+                                    </div>
+                                    <h3>翻訳サービス</h3>
+                                    <p>中国語⇔日本語の翻訳はお任せください</p>
+                                </div>
+                                <a href="#" class="btn btn-primary">See More</a>
+                            </div>
+                        </div>
+                        <!-- col -->
+                    </div>
+                    <!-- row .content-block4-item-->
+                </div>
+                <!-- /.container -->
+            </div>
+            <!-- /.content-block4 -->   
+            
+            <div class="content-block5">
+                <div class="container">
+                    <h1>基礎知識</h1>
+                    <h2>Basic Knowledge</h2>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="content-block5-item">
+                                <img src="img/block5/card1.png" alt="card1">
+                                <div class="content-block5-item_content">
+                                    <h3>この部分はおすすめ商品の欄に変更出来ますでしょうか？</h3>
+                                    <h4>あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい , 
+                                         あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい , 
+                                    </h4>
+                                    <a href="#" class="btn btn-primary">See More</a>
+                                </div>
+                            </div>
+                            <!-- /.content-block5-item -->
+                        </div>
+                        <!-- /.col-12 -->
+                        <div class="col-12">
+                            <div class="content-block5-item">
+                                <img src="img/block5/card2.png" alt="card2">
+                                <div class="content-block5-item_content">
+                                    <h3>横に3マス　縦に3マス程度で写真・説明文・購入先リンクの貼付が必要です。</h3>
+                                    <h4>あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい ,  
+                                        あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい , 
+                                    </h4>
+                                    <a href="#" class="btn btn-primary">See More</a>
+                                </div>
+                            </div>
+                            <!-- /.content-block5-item -->
+                        </div>
+                        <!-- /.col-12 -->
+                        <div class="col-12">
+                            <div class="content-block5-item">
+                                <img src="img/block5/card3.png" alt="card3">
+                                <div class="content-block5-item_content">
+                                    <h3>基礎知識と同じで過去の提案履歴も表示出来るようにお願いします。</h3>
+                                    <h4>あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい ,  
+                                        あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい , 
+                                    </h4>
+                                    <a href="#" class="btn btn-primary">See More</a>
+                                </div>
+                            </div>
+                            <!-- /.content-block5-item -->
+                        </div>
+                        <!-- /.col-12 -->
+                        <div class="col-12">
+                            <div class="content-block5-item">
+                                <img src="img/block5/card3.png" alt="card3">
+                                <div class="content-block5-item_content">
+                                    <h3>基礎知識と同じで過去の提案履歴も表示出来るようにお願いします。</h3>
+                                    <h4>あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい ,  
+                                        あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい ,  
+                                    </h4>
+                                    <a href="#" class="btn btn-primary">See More</a>
+                                </div>
+                            </div>
+                            <!-- /.content-block5-item -->
+                        </div>
+                        <!-- /.col-12 -->
+                    </div>
+                    <!-- row -->
+                    <div class="content-block5-btn">
+                        <a href="#" class="btn btn-white">VIEW ALL</a>
+                    </div>
+                    <!-- content-block5-btn -->
+                </div>
+            </div>
+            <!-- /.content-block5 -->
         </div>
         <!-- content -->
       </div>
