--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h3>Admin</h3>
                 <div class="top-nav_button">
                     <div class="top-nav_button-circle">
-                        <i class="fa fa-bars" aria-hidden="true"></i>
+                        <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
                     </div>
                 </div>
             </div>
@@ -412,6 +412,171 @@
                 </div>
             </div>
             <!-- /.content-block5 -->
+
+            <div class="content-block6">
+                <div class="container">
+                    <h1>Q&A</h1>
+                    <h2>よくある質問</h2>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll1">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 1 -->
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 2-->
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 3-->
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 4-->
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 5-->
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 6-->
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 7-->
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 8-->
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 9-->
+                        <div class="col-md-6 col-sm-12">
+                            <div class="content-block6-item">
+                                <h3>中国語がわからないのですが、購入を依頼することはできますか？</h3>
+                                <button type="button" class="btn-scroll">
+                                    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="content-block6-item_none">
+                                <h4>商品についてご不明な点などは担当のスタッフまでご相談ください。経験豊富な弊社のスタッフが丁寧にサポートします。
+                                    商品は弊社よりショップに確認させて頂きます。 また注文間違えや注文ミス
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- col 10-->
+                    </div>
+                    <!-- row -->
+                </div>
+                <!-- container -->
+            </div>
+            <!-- /.content-block6 -->
+
+            
+
         </div>
         <!-- content -->
       </div>
