--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
+
+            <!-- Adapt menu -->
+            <div class="adapt-menu">
+                <ul class="adapt-menu_items">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Cost</a></li>
+                    <li><a href="#">Usage method</a></li>
+                    <li><a href="#">Company profile</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
         
             <div class="top-nav_user">
                 <img src="img/icons/user.png" alt="user">
@@ -40,7 +52,7 @@
                     </div>
                 </div>
             </div>
-  
+
         </div>
         <!-- /.top-nav -->
       </div>
