--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
             <div class="top-nav_menu">
                 <ul class="top-nav_items">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Cost</a></li>
                     <li><a href="#">Usage method</a></li>
-                    <li><a href="#">Company profile</a></li>
+                    <li><a href="company.html">Company profile</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
