--- a/company.html
+++ b/company.html
@@ -23,11 +23,13 @@
             <div class="top-nav_menu">
                 <ul class="top-nav_items">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="news.html">News</a></li>
-                    <li><a href="register.html">Register</a></li>
-                    <li><a href="company.html">Company profile</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <!-- <li><a href="register.html">Register</a></li> -->
+                    <li><a href="guide.html">Guide</a></li>
+                    <li><a href="company.html">Company</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         
